# test-rust

./: Cargo.toml
src/: main.rs
