[package]
name = "test-rust"
version = "0.1.0"
authors = ["thmadong <2194667913@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { git = "https://github.com/thmadong/test-rust-a.git", version = "0.1.0" }